nixidy/generated/prod/logseq/Service-logseq.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: logseq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logseq
    app.kubernetes.io/service: logseq
  name: logseq
  namespace: home
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: logseq
    app.kubernetes.io/instance: logseq
    app.kubernetes.io/name: logseq
  type: ClusterIP
