nixidy/generated/prod/logseq/HTTPRoute-logseq.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: logseq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: logseq
  name: logseq
  namespace: home
spec:
  hostnames:
    - logseq.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: identity
          port: 4180
          weight: 1
